# dotfiles-tool

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: rust.yml
src/: config.rs  export.rs  git.rs  import.rs  main.rs  parser.rs
