[package]
name = "dotfiles-tool"
version = "0.1.0"
authors = ["Ominitay <37453713+Ominitay@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.8.0"
log = "0.4.11"
dirs = "3.0.1"
git2 = "0.13"
